--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "PurpleRed",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^5.1.0",
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
     "ejs": "^3.1.6",
